--- a/index.html
+++ b/index.html
@@ -350,37 +350,37 @@
                     <ul>
                       <li slide-num="1">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/1.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w1.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="2">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/2.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w2.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="3">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/3.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w3.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="4">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/4.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w4.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="5">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/5.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w5.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="6">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/6.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w6.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
@@ -392,61 +392,61 @@
                     <ul>
                       <li slide-num="7">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/7.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w7.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="8">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/8.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w8.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="9">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/9.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w9.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="10">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/10.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w10.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="11">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/11.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w11.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="12">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/12.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w12.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="13">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/13.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w13.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="14">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/14.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w14.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="15">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/15.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w15.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="16">
                         <a href="javascript:;">
-                          <span class="img lazy" data-src="./assets/dist/gallery/16.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/w16.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
